fix: boyscout - improving readability 1.2.1

--- a/src/app/theme.module.css
+++ b/src/app/theme.module.css
@@ -2,7 +2,3 @@
   color: #fff;
   background: #58c8c6;
 }
-.btn {
-  color: #fff;
-  background: #00324d;
-}
